# TinyJobs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
TinyJobs/: CMakeLists.txt
TinyJobs/examples/: CMakeLists.txt
TinyJobs/examples/ecs_example/: CMakeLists.txt  ecs_example.cpp
TinyJobs/include/: TinyJobs.h
